--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "plantmanager",
-    "slug": "plantmanager",
+    "name": "PlantManager",
+    "slug": "plant-manager",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
