--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
+    "expo-app-loading": "1.1.2",
     "expo-font": "~9.2.1",
     "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
@@ -31,7 +31,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-screens": "3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
